# papyrus

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_cloud_token_expiry.py  002_make_printjob_userid_nullable.py  003_add_printers_scanners.py  004_timezone_datetime.py  005_make_scanjob_userid_nullable.py  006_add_local_auth_fields.py  006_create_scan_profiles.py  007_create_audit_log.py  008_create_webhooks.py  009_add_release_pin.py  010_add_local_auth_fields.py  011_fix_none_string_settings.py  (+2 more)
backend/app/: config.py  database.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  request_context.py  schemas.py
backend/tests/: conftest.py  test_admin_stats.py  test_alert_service.py  test_api_auth.py  test_api_errors.py  test_api_escl.py  test_api_jobs.py  test_api_printers.py  test_api_settings.py  test_convert_service.py  test_cors_settings.py  test_cups_admin.py  test_cups_backend_script.py  test_cups_service.py  test_discovery_service.py  test_email_service.py  test_escl_job_eviction.py  test_exception_handlers.py  test_file_service.py  test_http_client.py  test_image_service.py  test_ipp_client.py  test_logging_config.py  test_printer_status_watcher.py  test_printers_router.py  test_request_context.py  test_scanner_thumbnail_endpoint.py  test_schemas.py  test_settings_cache.py  test_smb_service.py  test_test_page_service.py  test_thumbnail_service.py  test_tokens.py  test_webhook_signing.py  test_ws_serialization.py
(+175 files in other folders)
