[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papyrus"
version = "0.1.0"
description = "Web-based print and scan server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pycups>=2.0.4",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "img2pdf>=0.5.0",
    "Pillow>=10.0.0",
    "pysmb>=1.2.9",
    "aiosmtplib>=3.0.0",
    "itsdangerous>=2.2.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
cloud = [
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "dropbox>=12.0.0",
]
ocr = [
    "ocrmypdf>=16.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
